# JavaH264

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties
.github/workflows/: release.yml
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/camera/: mod.rs
rust/src/openh264/: decoder.rs  encoder.rs  exceptions.rs  mod.rs
src/main/java/dev/nexbit/javah264/: CameraDevice.java  CameraVideoFormat.java  DecodeResult.java  H264Decoder.java  H264Encoder.java  LibraryLoader.java  NativeCamera.java  NativeCameraStream.java  OpenH264Lib.java
src/main/java/dev/nexbit/javah264/exception/: EncoderException.java  UnknownPlatformException.java
src/test/java/dev/nexbit/javah264/: JavaH264Test.java
